<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/dialog_body">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_between"
        android:text="@string/info_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/info_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btndesign_login"
        android:text="@string/crear_boton"
        android:textColor="@android:color/white" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/btnCrearCuenta"
        android:layout_marginTop="@dimen/padding_between"
        android:layout_marginBottom="@dimen/padding_between"
        android:background="#C8C9CB" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="Iniciar Sesion"
        android:textColor="#A9000000"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/nombre_input"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_marginBottom="@dimen/padding_between"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/contrasena_input"
        android:inputType="textPassword"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/check_mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrasena_input"
        android:layout_alignStart="@+id/contrasena_input"
        android:layout_alignLeft="@+id/contrasena_input"
        android:onClick="showPassword"
        android:checked="false"
        android:text="Mostrar contraseña" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btndesign_login"
        android:layout_marginTop="40dp"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:onClick="entrar"
        android:text="@string/entrar_boton"
        android:textColor="@android:color/white" />

</LinearLayout>